--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -23,7 +23,7 @@ layout: base
 <hr class="dingbat related" />
 
 {% assign addons = page.addons | default:site.hydejack.post_addons %}
-{% unless addons %}{% assign addons = "about,newsletter,related,random" | split:"," %}{% endunless %}
+{% unless addons %}{% assign addons = "about,related,random" | split:"," %}{% endunless %}
 {% for addon in addons %}
   {% case addon %}
   {% when 'about' %}
